--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -4,7 +4,56 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 		<title>LineShop</title>
 	</head>
-	<body></body>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">LineshoP</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarColor02">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+								<i>The best online store, for real.</i>
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<button class="btn btn-secondary my-2 my-sm-0" type="submit" control-id="ControlID-4">Connexion</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+		<table class="table table-hover text-center">
+			<tr class="table-active">
+				<th scope="row">Welcome
+					<a href="#" style="color: grey; text-decoration: none;">login</a>.
+				</th>
+			</tr>
+		</table>
+		<div class="d-flex flex-row">
+			<div class="p-2">
+				<a href="#" style="text-decoration: none; color: black">
+					<b>All Categories</b>
+				</a>
+			</div>
+			<div class="p-2">
+				<a href="#" style="text-decoration: none; color: black">
+					<b>Consoles</b>
+				</a>
+			</div>
+			<div class="p-2">
+				<a href="#" style="text-decoration: none; color: black">
+					<b>Jeux</b>
+				</a>
+			</div>
+		</div>
+	</body>
 </html>
