--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,18 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription
+{% block title %}Sign Up
 {% endblock %}
 
 {% block body %}
-	<h1>Inscription</h1>
-
-	{{ form_start(registrationForm) }}
-	{{ form_row(registrationForm.email) }}
-	{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-	{{ form_row(registrationForm.agreeTerms) }}
-
-	<button type="submit" class="btn">Validez</button>
-	{{ form_end(registrationForm) }}
+	<div class="row" style="margin-top: 3rem;">
+		<div class="card text-white bg-dark mt-5 mb-3 m-auto" style="max-width: 50rem; height: 24rem;">
+			<div class="col text-center mt-3">
+				<h1 class="mt-2 mb-4">Sign Up</h1>
+				{{ form_start(registrationForm) }}
+				<div class="col-7 m-auto">
+					{{ form_row(registrationForm.email, {'label': 'Email'}) }}
+				</div>
+				<div class="col-7 m-auto">
+					{{ form_row(registrationForm.plainPassword, { 'label': 'Password' })}}
+				</div>
+				<div class="col-8 mt-3">
+					{{ form_row(registrationForm.agreeTerms, {'label': "I agree with terms"}) }}
+				</div>
+				<div class="col-7 m-auto">
+					<button type="submit" class="btn btn-secondary mt-1 col-12">Validez</button>
+				</div>
+				{{ form_end(registrationForm) }}
+			</div>
+		</div>
+	</div>
 {% endblock %}
