--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,43 +9,28 @@
 			{% if error %}
 				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 			{% endif %}
-			{% if app.user %}
-				<div class="mb-3">
-					Vous êtes connecté en tant que
-					{{ app.user.userIdentifier }},
-					<a href="{{ path('app_logout') }}">Déconnection</a>
-				</div>
-			{% endif %}
-			<div class="row" style="margin-top: 5rem;">
-				<div class="card text-white bg-dark mt-5 mb-3 m-auto" style="max-width: 50rem; height: 22rem;">
-					<div class="col text-center mt-5">
-						<div class="col-6 mb-3 m-auto">
-							<label for="exampleInputEmail1" class="form-label">Email address</label>
-							<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+			<div class="row" style="margin-top: 3rem;">
+				<div class="card text-white bg-dark mt-5 mb-3 m-auto" style="max-width: 50rem; height: 24rem;">
+					<div class="col text-center mt-4">
+						<h1>Log In</h1>
+						<div class="col-6 mt-3 mb-3 m-auto">
+							<label for="inputEmail" class="form-label">Email</label>
+							<input type="email" value="{{last_username}}" name="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
 						</div>
 						<div class="col-6 mb-4 m-auto">
-							<label for="exampleInputPassword1" class="form-label">Password</label>
-							<input type="password" class="form-control" id="exampleInputPassword1">
+							<label for="inputPassword" class="form-label">Password</label>
+							<input type="password" name="password" class="form-control" id="inputPassword">
 						</div>
-						<div class="col mt-4 form-check ">
-							<button type="submit" class="btn btn-secondary col-3">Submit</button>
+						<input type="hidden" name="_csrf_token" value="{{csrf_token('authenticate')}}">
+						<div class="col-6 m-auto mt-4 ps-3 form-check ">
+							<button type="submit" class="btn btn-secondary col-12">Connexion</button>
 						</div>
-						<div class="col-6 mt-4 m-auto">
-							<a {% if app.request.get('_route') == 'register' %} active {% endif %} " href=" register" style=" text-decoration: none; color: white">Or register here</a>
+						<div class="col-8 ms-4 mt-4">
+							<a {% if app.request.get('_route') == 'register' %} active {% endif %} href="register" style="text-decoration: none; color: white">Create an account</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			{#
-																																																																																																																																																																																																																																																																																																																																												        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																																																																																																																																																																																																																																																																																																																																												        See https://symfony.com/doc/current/security/remember_me.html
-																																																																																																																																																																																																																																																																																																																																												
-																																																																																																																																																																																																																																																																																																																																												        <div class="checkbox mb-3">
-																																																																																																																																																																																																																																																																																																																																												            <label>
-																																																																																																																																																																																																																																																																																																																																												                <input type="checkbox" name="_remember_me"> Remember me
-																																																																																																																																																																																																																																																																																																																																												            </label>
-																																																																																																																																																																																																																																																																																																																																												        </div>
-																																																																																																																																																																																																																																																																																																																																												    #}
 		</form>
 	</div>
 {% endblock %}
