--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,29 +20,29 @@
 		{% endblock %}
 	</head>
 	<body>
-		<nav class=" navbar navbar-expand-lg navbar-light bg-light">
-			<ul class='nav nav-pills nav-fill'>
-				<li class="nav-item">
-					<a class="nav-link {% if app.request.get('_route') == 'article' %}active{% endif %}" href="article">Article</a>
-				</li>
-				{# a réactiver plus tard : #}
-				{# {% if is_granted('ROLE_ADMIN') %} #}
+		{# <nav class=" navbar navbar-expand-lg navbar-light bg-light"> #}
+		<ul class='nav nav-pills nav-fill'>
+			<li class="nav-item">
+				<a class="nav-link {% if app.request.get('_route') == 'article' %}active{% endif %}" href="article">Article</a>
+			</li>
+
+			{% if is_granted('ROLE_ADMIN') %}
 				<li class="nav-item">
 					<a class="nav-link {% if app.request.get('_route') == 'createArticle' %}active{% endif %}" href="createArticle">Add Article</a>
 				</li>
-				{# {% endif %} #}
-				<li class="nav-item">
-					<a class="nav-link {% if app.request.get('_route') == 'categorie' %}active{% endif %}" href="categorie">Catégorie</a>
-				</li>
-				{# a réactiver plus tard : #}
-				{# {% if is_granted('ROLE_ADMIN') %} #}
+			{% endif %}
+			<li class="nav-item">
+				<a class="nav-link {% if app.request.get('_route') == 'categorie' %}active{% endif %}" href="categorie">Catégorie</a>
+			</li>
+
+			{% if is_granted('ROLE_ADMIN') %}
 				<li class="nav-item">
 					<a class="nav-link {% if app.request.get('_route') == 'createCategorie' %}active{% endif %}" href="createCategorie">Add Catégorie</a>
 				</li>
-				{# {% endif %} #}
-			</ul>
-		</nav>
+			{% endif %}
+		</ul>
+		{# </nav> #}
 
 		{% block body %}{% endblock %}
 	</body>
-</html>
+</html></body></html>
