--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,7 +15,7 @@
 				<div class="col-7 m-auto">
 					{{ form_row(registrationForm.plainPassword, { 'label': 'Password' })}}
 				</div>
-				<div class="col-8 mt-3">
+				<div class="col-7 m-auto mt-3">
 					{{ form_row(registrationForm.agreeTerms, {'label': "I agree with terms"}) }}
 				</div>
 				<div class="col-7 m-auto">
