--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -37,9 +37,10 @@
 	</div>
 	{% for art in articles %}
 		<p>{{art.getNomArticle}}
-			{{art.getImageArticle}}
+			{# <img src={{art.getImageArticle}} alt="image"> #}
+			{# <img src={{asset(image/console-ps4.jpg)}}> #}
 			{{art.getPrixArticle}}
 			{{art.getDescriptionArticle}}
-			{{art.getId}}</p>
-	{% endfor %}
-{% endblock %}
+		{{art.getId}}
+	</p>
+{% endfor %}{% endblock %}
