--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,7 +19,7 @@
 					{{ form_row(registrationForm.agreeTerms, {'label': "I agree with terms"}) }}
 				</div>
 				<div class="col-7 m-auto">
-					<button type="submit" class="btn btn-secondary mt-1 col-12">Validez</button>
+					<button type="submit" class="btn btn-secondary mt-1 col-12">Create account</button>
 				</div>
 				{{ form_end(registrationForm) }}
 			</div>
