--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,73 +43,68 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col">
-				<table class="table table-hover text-center pb-0" style="margin-bottom: 0;">
-					<tr class="table-active">
-						<th scope="row">
-							{% if app.user %}
-								<div>
-									Welcome
-									{{ app.user.userIdentifier }}
-									you can
-									<a href="{{ path('app_logout') }}" style="color: grey; text-decoration: none;">logout.</a>
-								</div>
-							{% else %}
-								<span>
-									Welcome
-									<a {% if app.request.get('_route') == 'app_login' %} href="login" active {% endif %} style="color: grey; text-decoration: none;">login.</a>
-								</span>
-							{% endif %}
-						</th>
-					</tr>
-				</table>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<nav class=" navbar navbar-expand-lg navbar-light bg-light">
-					<div class="d-flex flex-row">
-						<div class="p-2">
-							<a {% if app.request.get('_route') == 'article' %} active {% endif %} href="article" style="text-decoration: none; color: black">
-								<b>Article</b>
-							</a>
-						</div>
-						<div class="p-2">
-							<a {% if app.request.get('_route') == 'categorie' %} active {% endif %} href="categorie" style="text-decoration: none; color: black">
-								<b>Consoles</b>
-							</a>
-						</div>
-						{% if is_granted('ROLE_ADMIN') %}
-							<div class="p-2">
-								<a {% if app.request.get('_route') == 'createCategorie' %} active {% endif %} href="createCategorie" style="text-decoration: none; color: black">
-									<b>Jeux</b>
-								</a>
-							{% endif %}
-							{% if app.user %}
+			{% if app.user %}
+				<div class="col">
+					<table class="table table-hover text-center pb-0" style="margin-bottom: 0; border: hidden;">
+						<tr class="table-secondary">
+							<th scope="row">
+								{% if app.user %}
+									<div>
+										Welcome
+										{{ app.user.userIdentifier }}
+										you can
+										<a href="{{ path('app_logout') }}" style="color: grey; text-decoration: none;">logout.</a>
+									</div>
 								{% else %}
-									<div class="p-2">
-										<a {% if app.request.get('_route') == 'login' %} active {% endif %} href="login" style="text-decoration: none; color: black">
-											<b>Log In</b>
-										</a>
-									</div>
-									<div class="p-2">
-										<a {% if app.request.get('_route') == 'register' %} active {% endif %} href="register" style="text-decoration: none; color: black">
-											<b>Inscription</b>
-										</a>
-									</div>
-							{% endif %}
-						</div>
-						<div class="p-2">
-							{% if is_granted('ROLE_ADMIN') %}
-								<a {% if app.request.get('_route') == 'createArticle' %} active {% endif %} href="createArticle" style="text-decoration: none; color: black">
-									<b>All Categories</b>
-								</a>
-							{% endif %}
-						</div>
-					</div>
-				</nav>
-			</div>
-		</div>
-		{% block body %}{% endblock %}
+									<span>
+										Welcome
+										<a {% if app.request.get('_route') == 'app_login' %} href="login" active {% endif %} style="color: grey; text-decoration: none;">login.</a>
+									</span>
+								{% endif %}
+							</th>
+						</tr>
+					</body>
+				</html>
+			</tr>
+		</table>
 	</body>
-</html>
+</html></div>{% endif %}</div><div class="row"><div class="col"><nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="d-flex flex-row">
+	<div class="p-2">
+		<a {% if app.request.get('_route') == 'article' %} active {% endif %} href="article" style="text-decoration: none; color: black">
+			<b>Article</b>
+		</a>
+	</div>
+	<div class="p-2">
+		<a {% if app.request.get('_route') == 'categorie' %} active {% endif %} href="categorie" style="text-decoration: none; color: black">
+			<b>Consoles</b>
+		</a>
+	</div>
+	{% if is_granted('ROLE_ADMIN') %}
+		<div class="p-2">
+			<a {% if app.request.get('_route') == 'createCategorie' %} active {% endif %} href="createCategorie" style="text-decoration: none; color: black">
+				<b>Jeux</b>
+			</a>
+		{% endif %}
+		{% if app.user %}
+			{% else %}
+				<div class="p-2">
+					<a {% if app.request.get('_route') == 'login' %} active {% endif %} href="login" style="text-decoration: none; color: black">
+						<b>Log In</b>
+					</a>
+				</div>
+				<div class="p-2">
+					<a {% if app.request.get('_route') == 'register' %} active {% endif %} href="register" style="text-decoration: none; color: black">
+						<b>Inscription</b>
+					</a>
+				</div>
+		{% endif %}
+	</div>
+	<div class="p-2">
+		{% if is_granted('ROLE_ADMIN') %}
+			<a {% if app.request.get('_route') == 'createArticle' %} active {% endif %} href="createArticle" style="text-decoration: none; color: black">
+				<b>All Categories</b>
+			</a>
+		{% endif %}
+	</div>
+</div></nav></div></div>{% block body %}{% endblock %}</body></html>
