--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,48 +63,54 @@
 								{% endif %}
 							</th>
 						</tr>
-					</body>
-				</html>
-			</tr>
-		</table>
+					</table>
+				</div>
+			{% endif %}
+		</div>
+		<div class="row">
+			<div class="col">
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<div class="d-flex flex-row">
+						<div class="p-2">
+							<a {% if app.request.get('_route') == 'article' %} active {% endif %} href="article" style="text-decoration: none; color: black">
+								<b>Article</b>
+							</a>
+						</div>
+						<div class="p-2">
+							<a {% if app.request.get('_route') == 'categorie' %} active {% endif %} href="categorie" style="text-decoration: none; color: black">
+								<b>Consoles</b>
+							</a>
+						</div>
+						{% if app.user %}
+							{% if is_granted('ROLE_ADMIN') %}
+								<div class="p-2">
+									<a {% if app.request.get('_route') == 'createCategorie' %} active {% endif %} href="createCategorie" style="text-decoration: none; color: black">
+										<b>Créer catégorie</b>
+									</a>
+								</div>
+							{% endif %}
+							<div class="p-2">
+								{% if is_granted('ROLE_ADMIN') %}
+									<a {% if app.request.get('_route') == 'createArticle' %} active {% endif %} href="createArticle" style="text-decoration: none; color: black">
+										<b>Catégories</b>
+									</a>
+								{% endif %}
+							</div>
+						{% else %}
+							<div class="p-2">
+								<a {% if app.request.get('_route') == 'login' %} active {% endif %} href="login" style="text-decoration: none; color: black">
+									<b>Log In</b>
+								</a>
+							</div>
+							<div class="p-2">
+								<a {% if app.request.get('_route') == 'register' %} active {% endif %} href="register" style="text-decoration: none; color: black">
+									<b>Inscription</b>
+								</a>
+							</div>
+						{% endif %}
+					</div>
+				</nav>
+			</div>
+		</div>
 	</body>
-</html></div>{% endif %}</div><div class="row"><div class="col"><nav class="navbar navbar-expand-lg navbar-light bg-light">
-<div class="d-flex flex-row">
-	<div class="p-2">
-		<a {% if app.request.get('_route') == 'article' %} active {% endif %} href="article" style="text-decoration: none; color: black">
-			<b>Article</b>
-		</a>
-	</div>
-	<div class="p-2">
-		<a {% if app.request.get('_route') == 'categorie' %} active {% endif %} href="categorie" style="text-decoration: none; color: black">
-			<b>Consoles</b>
-		</a>
-	</div>
-	{% if is_granted('ROLE_ADMIN') %}
-		<div class="p-2">
-			<a {% if app.request.get('_route') == 'createCategorie' %} active {% endif %} href="createCategorie" style="text-decoration: none; color: black">
-				<b>Jeux</b>
-			</a>
-		{% endif %}
-		{% if app.user %}
-			{% else %}
-				<div class="p-2">
-					<a {% if app.request.get('_route') == 'login' %} active {% endif %} href="login" style="text-decoration: none; color: black">
-						<b>Log In</b>
-					</a>
-				</div>
-				<div class="p-2">
-					<a {% if app.request.get('_route') == 'register' %} active {% endif %} href="register" style="text-decoration: none; color: black">
-						<b>Inscription</b>
-					</a>
-				</div>
-		{% endif %}
-	</div>
-	<div class="p-2">
-		{% if is_granted('ROLE_ADMIN') %}
-			<a {% if app.request.get('_route') == 'createArticle' %} active {% endif %} href="createArticle" style="text-decoration: none; color: black">
-				<b>All Categories</b>
-			</a>
-		{% endif %}
-	</div>
-</div></nav></div></div>{% block body %}{% endblock %}</body></html>
+</html></div>{% block body %}{% endblock %}</body></html>
